@@ -33,17 +33,6 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2019 MonetDB B.V.
   <property file="build.local.properties" />
   <property file="build.properties" />
 
-  <property name="jdbc-jar"
-    value="${jardir}/monetdb-jdbc-${JDBC_MAJOR}.${JDBC_MINOR}.jar" />
-  <property name="jdbcclient-jar"
-    value="${jardir}/jdbcclient.jar" />
-  <property name="jmonetdb-jar"
-    value="${jardir}/jmonetdb.jar" />
-  <property name="mcl-jar"
-    value="${jardir}/monetdb-mcl-${MCL_MAJOR}.${MCL_MINOR}.jar" />
-  <property name="mero-control-jar"
-    value="${jardir}/merocontrol.jar" />
-
   <!-- 
 
   Cross-compile for JVM 1.5 ("Java 5"). This allows the driver to work with older java installations.
@@ -56,8 +45,20 @@ Copyright 1997 - July 2008 CWI, August 2008 - 2019 MonetDB B.V.
   2015-07-16, sjoerd@acm.org
 
   -->
-  <property name="jvm.version"               value="1.7" />
-  <property name="javac.flags"               value="-Xlint:-options" />
+  <property name="jvm.version"  value="1.7" />
+  <property name="jre.version"  value="jre7" />
+  <property name="javac.flags"  value="-Xlint:-options" />
+
+  <property name="jdbc-jar"
+    value="${jardir}/monetdb-jdbc-${JDBC_MAJOR}.${JDBC_MINOR}.${jre.version}.jar" />
+  <property name="jdbcclient-jar"
+    value="${jardir}/jdbcclient.${jre.version}.jar" />
+  <property name="jmonetdb-jar"
+    value="${jardir}/jmonetdb.${jre.version}.jar" />
+  <property name="mcl-jar"
+    value="${jardir}/monetdb-mcl-${MCL_MAJOR}.${MCL_MINOR}.${jre.version}.jar" />
+  <property name="mero-control-jar"
+    value="${jardir}/merocontrol.${jre.version}.jar" />
 
   <!-- full target -->
   <target name="all">
